k8s/ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: kubecon-demo
  labels:
    app: ui
    version: "${VERSION}"
    route: "${ROUTE}"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
        version: "${VERSION}"
        route: "${ROUTE}"
    spec:
      containers:
        - name: ui
          image: "${IMAGE_TAG}"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: kubecon-demo
spec:
  selector:
    app: ui
  ports:
    - name: http-ui
      port: 80
      targetPort: 80
